added class CurrenciesServlet, doPost, doGet are done